fix mobile alignment

--- a/style.css
+++ b/style.css
@@ -97,7 +97,6 @@ input[type="text"] {
 
 .single-meal {
   margin: 30px auto;
-  width: 70%;
 }
 
 .single-meal img {
